fixed the header issue for logo on mobile

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -40,7 +40,7 @@
 
     width: 100%;
     height: 100%;
-    padding: 3rem;
+    margin: 3rem;
 
     @include tablet() {
       display: none;
@@ -57,7 +57,7 @@
     border-radius: 1rem;
     width: 100%;
     min-height: 9rem;
-    min-width: 240px;
+    //min-width: 240px;
 
     &--tablet {
       background: url("../assets/Icons/search.svg");
@@ -94,7 +94,7 @@
   }
   &__upload-container {
     width: 100%;
-    padding: 3rem;
+    margin: 3rem;
     padding-top: 1rem;
     padding-bottom: 4rem;
     @include tablet() {
